Add more styles and scripts to transition among article as navigated by navbar

--- a/index.html
+++ b/index.html
@@ -39,21 +39,24 @@
       </header>
 
       <section class="main-section__content">
-        <img class="main-section__content-banner-image main-section__content-about-me-banner-image" src="images/banner-javascript.jpg"
-          alt="About Me Banner Image">
-        <article class="main-section__content-about-me">
-          <h2>About Me</h2>
+        <article class="main-section__content-article main-section__content-article--active main-section__content-about-me" data-attr="about-me">
+          <img class="main-section__content-banner-image main-section__content-about-me-banner-image" src="images/banner-javascript.jpg"
+            alt="About Me Banner Image">
+          <h2>Technical Summary</h2>
           <p class="main-section__content-paragraph">
             An accomplished full stack developer with skills and experience on the latest Javascript technology and framework for creating
             rich user experiences.
           </p>
+          <h2>My Education</h2>
+          <p class="main-section__content-paragraph">I graduated from UCI...</p>
         </article>
 
-        <article class="main-section__content-my-experience">
-
+        <article class="main-section__content-article main-section__content-article--inactive main-section__content-my-experience" data-attr="my-experience">
+          <h2>My Professional Experience</h2>
+          <p></p>
         </article>
 
-        <article class="main-section__content-my-projects">
+        <article class="main-section__content-article main-section__content-article--inactive main-section__content-my-projects" data-attr="my-projects">
           <img class="main-section__content-banner-image main-section__content-my-projects-banner-image" src="images/banner.jpg" alt="My Projects Banner Image">
           <article class="featured-work">
             <header class="featured-work__header">
@@ -61,13 +64,13 @@
             </header>
             <div class="featured-work__content">
               <div class="featured-work-1">
-                featured work 1
+                Green Lava ....
               </div>
               <div class="featured-work-2">
-                featured work 2
+                Zotmovies.com ....
               </div>
               <div class="featured-work-3">
-                featured work 3
+                Restaurant Point-of-Sale Application ...
               </div>
             </div>
           </article>
@@ -77,7 +80,7 @@
     </section>
   </main>
   <footer>
-    <!-- <p>Copyright 2018 - Thuc Huyen</p> -->
+    <p>Copyright 2018 - Thuc Huyen</p>
   </footer>
 
 </body>
