add more styles and markup

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <main>
     <aside class="sidebar sidebar--inactive" data-attr="inactive">
       <ul class="sidebar__list">
-        <li class="sidebar__list-item" data-attr="about-me">About Me</li>
+        <li class="sidebar__list-item sidebar__list-item--active" data-attr="about-me">About Me</li>
         <li class="sidebar__list-item" data-attr="my-experience">My Experience</li>
         <li class="sidebar__list-item" data-attr="my-projects">My Projects</li>
       </ul>
@@ -47,8 +47,14 @@
             An accomplished full stack developer with skills and experience on the latest Javascript technology and framework for creating
             rich user experiences.
           </p>
-          <h2>My Education</h2>
-          <p class="main-section__content-paragraph">I graduated from UCI...</p>
+          <!-- <h2>My Skills</h2>
+          <ul class="main-section__content-list">
+            <li>Languages: Javascript/ES6, PHP, Java, HTML/HTML5, CSS/CSS3/SCSS</li>
+            <li>Libraries: React/React Native, Redux, JQuery</li>
+            <li>Database Systems: MySQL, MongoDB</li>
+            <li>Framework: Foundation, Bootstrap, ExpressJS</li>
+            <li>Source Version Control technologies: Git, Team Foundation Service (TFS)</li>
+          </ul> -->
         </article>
 
         <article class="main-section__content-article main-section__content-article--inactive main-section__content-my-experience" data-attr="my-experience">
@@ -79,9 +85,9 @@
 
     </section>
   </main>
-  <footer>
+  <!-- <footer>
     <p>Copyright 2018 - Thuc Huyen</p>
-  </footer>
+  </footer> -->
 
 </body>
 
