add more markup/ add e.stopPropagation

--- a/index.html
+++ b/index.html
@@ -47,38 +47,33 @@
             An accomplished full stack developer with skills and experience on the latest Javascript technology and framework for creating
             rich user experiences.
           </p>
-          <!-- <h2>My Skills</h2>
+          <h2>My Skills</h2>
           <ul class="main-section__content-list">
             <li>Languages: Javascript/ES6, PHP, Java, HTML/HTML5, CSS/CSS3/SCSS</li>
             <li>Libraries: React/React Native, Redux, JQuery</li>
             <li>Database Systems: MySQL, MongoDB</li>
             <li>Framework: Foundation, Bootstrap, ExpressJS</li>
             <li>Source Version Control technologies: Git, Team Foundation Service (TFS)</li>
-          </ul> -->
+          </ul>
         </article>
 
         <article class="main-section__content-article main-section__content-article--inactive main-section__content-my-experience" data-attr="my-experience">
           <h2>My Professional Experience</h2>
-          <p></p>
+          <ul class="main-section__content-list">
+            <li> Full-Stack Developer at Zobrist Consulting Group, Woodland Hills, CA (January 2018 -  present)</li>
+            <li>Software Engineer Intern (LAMP stack) at Mytailor.com, Costa Mesa, CA (February 2017 – December 2017)</li>
+          </ul>
         </article>
 
         <article class="main-section__content-article main-section__content-article--inactive main-section__content-my-projects" data-attr="my-projects">
           <img class="main-section__content-banner-image main-section__content-my-projects-banner-image" src="images/banner.jpg" alt="My Projects Banner Image">
           <article class="featured-work">
-            <header class="featured-work__header">
-              <h2>Featured Work</h2>
-            </header>
-            <div class="featured-work__content">
-              <div class="featured-work-1">
-                Green Lava ....
-              </div>
-              <div class="featured-work-2">
-                Zotmovies.com ....
-              </div>
-              <div class="featured-work-3">
-                Restaurant Point-of-Sale Application ...
-              </div>
-            </div>
+            <h2>Featured Work</h2>
+            <ul class="main-section__content-list">
+                <li> Green Lava - A social media platform that brings tech people together with interesting tech topics </li>
+                <li>Zotmovies.com - An ecommerce website/Android app that sells top rated movies</li>
+                <li>Restaurant Point-of-Sale Application - A POS system with variety of functionalities that helps the restaurant business owners to operate smoothly</li>
+            </ul>
           </article>
         </article>
       </section>
