add some responsive styles and markup

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
         </article>
 
         <article class="main-section__content-article main-section__content-article--inactive main-section__content-my-experience" data-attr="my-experience">
+            <img class="main-section__content-banner-image main-section__content-my-experience-banner-image" src="images/banner-professional.jpg"
+            alt="My Experience Banner Image">
           <h2>My Professional Experience</h2>
           <ul class="main-section__content-list">
             <li> Full-Stack Developer at Zobrist Consulting Group, Woodland Hills, CA (January 2018 -  present)</li>
