--- a/index.html
+++ b/index.html
@@ -3,89 +3,152 @@
 <html lang="en">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- reset CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU="
+    crossorigin="anonymous" />
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
+
+  <!-- font awesome -->
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+    crossorigin="anonymous">
+
   <link rel="stylesheet" href="styles/style.css">
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+
   <script src="scripts/script.js"></script>
   <title>Thuc Huyen's portfolio</title>
 </head>
 
 <body>
-  <main>
-    <aside class="sidebar sidebar--inactive" data-attr="inactive">
-      <ul class="sidebar__list">
-        <li class="sidebar__list-item sidebar__list-item--active" data-attr="about-me">About Me</li>
-        <li class="sidebar__list-item" data-attr="my-experience">My Experience</li>
-        <li class="sidebar__list-item" data-attr="my-projects">My Projects</li>
-      </ul>
-    </aside>
-
-    <section class="main-section">
-      <header class="main-section__header">
-        <div class="main-section__sidebar-menu-icon main-section__sidebar-menu-icon--inactive">
-          <i class="fas fa-bars"></i>
-        </div>
-        <article>
-          <h1>Thuc Huyen</h1>
-          <p>Full Stack Developer</p>
-        </article>
-      </header>
-
-      <section class="main-section__content">
-        <article class="main-section__content-article main-section__content-article--active main-section__content-about-me" data-attr="about-me">
-          <img class="main-section__content-banner-image main-section__content-about-me-banner-image" src="images/banner-javascript.jpg"
-            alt="About Me Banner Image">
-          <h2>Technical Summary</h2>
-          <p class="main-section__content-paragraph">
-            An accomplished full stack developer with skills and experience on the latest Javascript technology and framework for creating
-            rich user experiences.
-          </p>
-          <h2>My Skills</h2>
-          <ul class="main-section__content-list">
-            <li>Languages: Javascript/ES6, PHP, Java, HTML/HTML5, CSS/CSS3/SCSS</li>
-            <li>Libraries: React/React Native, Redux, JQuery</li>
-            <li>Database Systems: MySQL, MongoDB</li>
-            <li>Framework: Foundation, Bootstrap, ExpressJS</li>
-            <li>Source Version Control technologies: Git, Team Foundation Service (TFS)</li>
-          </ul>
-        </article>
-
-        <article class="main-section__content-article main-section__content-article--inactive main-section__content-my-experience" data-attr="my-experience">
-            <img class="main-section__content-banner-image main-section__content-my-experience-banner-image" src="images/banner-professional.jpg"
-            alt="My Experience Banner Image">
-          <h2>My Professional Experience</h2>
-          <ul class="main-section__content-list">
-            <li> Full-Stack Developer at Zobrist Consulting Group, Woodland Hills, CA (January 2018 -  present)</li>
-            <li>Software Engineer Intern (LAMP stack) at Mytailor.com, Costa Mesa, CA (February 2017 – December 2017)</li>
-          </ul>
-        </article>
-
-        <article class="main-section__content-article main-section__content-article--inactive main-section__content-my-projects" data-attr="my-projects">
-          <img class="main-section__content-banner-image main-section__content-my-projects-banner-image" src="images/banner.jpg" alt="My Projects Banner Image">
-          <article class="featured-work">
-            <h2>Featured Work</h2>
-            <ul class="main-section__content-list">
-                <li> Green Lava - A social media platform that brings tech people together with interesting tech topics </li>
-                <li>Zotmovies.com - An ecommerce website/Android app that sells top rated movies</li>
-                <li>Restaurant Point-of-Sale Application - A POS system with variety of functionalities that helps the restaurant business owners to operate smoothly</li>
+  <main class="container-fulid">
+    <header class="row header">
+      <div class="col-4 col-md-2 col-lg-2 offset-lg-3 header__profile-pic-wrapper">
+        <img class="header__profile-pic-image" src="images/profilePic.png" alt="Profile picture">
+      </div>
+      <article class="col-8 col-md-10 col-lg-7 header__wrapper">
+        <h1 class="header__title">THUC HUYEN</h1>
+        <p class="header__paragraph">Full Stack Developer</p>
+        <!-- <div class="header__menu-icon-wrapper">
+          <i class="fa fa-bars header__menu-icon"></i>
+        </div> -->
+      </article>
+    </header>
+    <section class="row main-section">
+      <div class="col-5 col-md-3 sidebar sidebar-active sidebar" data-attr="active">
+        <ul class="sidebar__list list-group">
+          <li class="sidebar__list-item sidebar__list-item--active list-group-item" data-attr="about-me">About Me</li>
+          <li class="sidebar__list-item list-group-item" data-attr="my-experience">My Experience</li>
+          <li class="sidebar__list-item list-group-item" data-attr="my-projects">My Projects</li>
+          <li class="sidebar__list-item list-group-item" data-attr="my-education">My Education</li>
+        </ul>
+      </div>
+      <section class="col-7 col-md-9 main-section">
+        <section class="main-section__content">
+          <article class="main-section__content-article main-section__content-article--active main-section__content-about-me" data-attr="about-me">
+            <picture class="main-section__content-banner-image main-section__content-about-me-banner-image">
+              <source media="(min-width:1024px)" srcset="images/banner-javascript-large.jpg">
+              <img class="main-section__content-banner-image main-section__content-about-me-banner-image" src="images/banner-javascript.jpg"
+                alt="About Me Banner Image">
+            </picture>
+            <h2>Quick Intro</h2>
+            <p class="main-section__content-paragraph">
+              Hi, I'm Thuc. I'm an accomplished full stack developer with skills and experience on the latest Javascript technology and
+              framework for creating rich user experiences.
+            </p>
+            <h2>My Skills</h2>
+            <ul class="main-section__content-list main-section__content-my-skills-list">
+              <li>Languages: Javascript/ES6, PHP, Java, HTML/HTML5, CSS/CSS3/SCSS</li>
+              <li>Libraries: React/React Native, Redux, JQuery</li>
+              <li>Database Systems: MySQL, MongoDB</li>
+              <li>Framework: Foundation, Bootstrap, ExpressJS</li>
+              <li>Source Version Control technologies: Git, Team Foundation Service (TFS)</li>
             </ul>
           </article>
-        </article>
-      </section>
 
+          <article class="main-section__content-article main-section__content-article--inactive main-section__content-my-experience"
+            data-attr="my-experience">
+            <picture>
+              <source media="(min-width:1024px)" srcset="images/banner-professional-large.jpg">
+              <img class="main-section__content-banner-image main-section__content-my-experience-banner-image" src="images/banner-professional.jpg"
+                alt="My Experience Banner Image">
+            </picture>
+            <h2>My Professional Experience</h2>
+            <ul class="main-section__content-list main-section__content-my-experience-list">
+              <li> Full-Stack Developer at Zobrist Consulting Group, Woodland Hills, CA (January 2018 - present)
+              </li>
+              <li>
+                Software Engineer Intern (LAMP stack) at
+                <a href="https://www.mytailor.com">Mytailor.com</a>, Costa Mesa, CA (February 2017 – December 2017)
+              </li>
+            </ul>
+          </article>
+
+          <article class="main-section__content-article main-section__content-article--inactive main-section__content-my-projects"
+            data-attr="my-projects">
+            <picture class="main-section__content-banner-image main-section__content-my-projects-banner-image">
+              <source media="(min-width:1024px)" srcset="images/banner-project-large.jpg">
+              <img class="main-section__content-banner-image main-section__content-my-projects-banner-image" src="images/banner-project.jpg"
+                alt="My Projects Banner Image">
+            </picture>
+            <article class="featured-work">
+              <h2>Featured Work</h2>
+              <ul class="main-section__content-list main-section__content-my-projects-list"></ul>
+                <li> Green Lava - A social media platform that brings tech people together with interesting tech topics </li>
+                <li>Zotmovies.com - An ecommerce website/Android app that sells top rated movies</li>
+                <li>Restaurant Point-of-Sale Application - A POS system with variety of functionalities that helps the restaurant
+                  owners to run their business smoothly</li>
+              </ul>
+            </article>
+          </article>
+
+          <article class="main-section__content-article main-section__content-article--inactive main-section__content-my-education"
+            data-attr="my-education">
+            <picture class="main-section__content-banner-image main-section__content-my-education-banner-image">
+              <source media="(min-width:1024px)" srcset="images/banner-school-large.jpg">
+              <img class="main-section__content-banner-image main-section__content-my-education-banner-image" src="images/banner-school.jpg"
+                alt="My Education Banner Image">
+            </picture>
+            <h2>My Education</h2>
+            <ul class="main-section__content-list main-section__content-my-education-list">
+              <li>University of California, Irvine, CA
+                <ul>
+                  <li>Major: Computer Science</li>
+                  <li>Specialization: Information</li>
+                  <li>GPA: 3.95</li>
+                  <li>Degree: Bachelor of Science in Computer Science (BS CS)</li>
+                </ul>
+              </li>
+            </ul>
+            <ul class="main-section__content-list main-section__content-my-education-list">
+              <li>Orange Coast College, Costa Mes, CA
+                <ul>
+                  <li>Major: Computer Science</li>
+                  <li>GPA: 4.0</li>
+                </ul>
+              </li>
+            </ul>
+          </article>
+        </section>
+      </section>
     </section>
   </main>
-  <!-- <footer>
-    <p>Copyright 2018 - Thuc Huyen</p>
-  </footer> -->
-
+  <footer>
+    <p class="footer__paragraph">Copyright 2018 - Thuc Huyen</p>
+  </footer>
 </body>
-
 </html>
