add more styles and markup for featured work

--- a/index.html
+++ b/index.html
@@ -105,14 +105,26 @@
               <img class="main-section__content-banner-image main-section__content-my-projects-banner-image" src="images/banner-project.jpg"
                 alt="My Projects Banner Image">
             </picture>
-            <article class="featured-work">
+            <article class="main-section__content-article main-section__content-featured-work-article">
               <h2>Featured Work</h2>
-              <ul class="main-section__content-list main-section__content-my-projects-list"></ul>
-                <li> Green Lava - A social media platform that brings tech people together with interesting tech topics </li>
-                <li>Zotmovies.com - An ecommerce website/Android app that sells top rated movies</li>
-                <li>Restaurant Point-of-Sale Application - A POS system with variety of functionalities that helps the restaurant
-                  owners to run their business smoothly</li>
-              </ul>
+              <div class="main-section__content-featured-work row justify-content-center">
+                <article class="main-section__content-green-lava-featured-work col-sm-12 col-md-6 col-lg-4">
+                  <img class="main-section__content-banner-image" src="images/green-lava.jpg">
+                  <h2>Green Lava</h2>
+                  Green Lava - A social media platform that brings tech people together with interesting tech topics
+                </article>
+                <article class="main-section__content-zotmovies-featured-work col-sm-12 col-md-6 col-lg-4">
+                  <img class="main-section__content-banner-image" src="images/zotmovies.jpg">
+                  <h2>Zotmovies.com</h2>
+                  Zotmovies.com - An ecommerce website/Android app that sells top rated movie
+                </article>
+                <article class="main-section__content-POS-system-featured-work col-sm-12 col-md-6 col-lg-4">
+                  <img class="main-section__content-banner-image" src="images/POS-system.jpg">
+                  <h2>Restaurant Point-of-Sale Application</h2>
+                  Restaurant Point-of-Sale Application - A POS system with variety of functionalities that helps the restaurant
+                  owners to run their business smoothly
+                </article>
+              </div>
             </article>
           </article>
 
@@ -151,4 +163,5 @@
     <p class="footer__paragraph">Copyright 2018 - Thuc Huyen</p>
   </footer>
 </body>
+
 </html>
